tests/TypingSpec/valid/prog/bench-pragma.algst
{-# BENCHMARK Int String #-}

{-# BENCHMARK
∀(a:TU). a
∀(x:TU). x
#-}
