tests/TypingSpec/invalid/prog/bench-pragma-equal.algst
{-# BENCHMARK! Int Int #-}

{-# BENCHMARK!
dual ?Int.End!
!Int.End?
#-}
